# adk_rag_sample_code

./: .env.example  .gitignore  README.md  pyproject.toml
ingestion/: 00_preprocess.py  01_prepare_data.py  02_upload_to_gcs.py  03_create_datastore.py  04_import_documents.py  __init__.py
src/: __init__.py  agent_with_built_in_search_tool.py  agent_with_custom_search_tool.py  config.py  prompts.py  search_tool.py
